<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OcrActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="285dp"
                android:layout_height="154dp"
                android:background="#2d2d2d" />

            <TextView
                android:id="@+id/textViewPhotoText"
                android:layout_width="258dp"
                android:layout_height="83dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewOutputText"
                android:layout_width="258dp"
                android:layout_height="79dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonTranslate"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/translate"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/saveword"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/buttonOcrGomain"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/gomain"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>