<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:background="#fafafa"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="bottom"
        android:background="@drawable/header_bg"
        android:padding="2dp"
        >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="2"
        android:padding="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:padding="16dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPhoto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onCardClick"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagePhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_camera_alt_24" />

                    <TextView
                        android:id="@+id/textViewPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/takephoto"
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTranslate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onCardClick"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageTranslate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_translate_24" />

                    <TextView
                        android:id="@+id/textViewTranslate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/translate"
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardWordList"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onCardClick"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageWordList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_article_24" />

                    <TextView
                        android:id="@+id/textViewWordList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wordlist"
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHelp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="#fff"
                android:clickable="true"
                android:onClick="onCardClick"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageHelp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_help_center_24" />

                    <TextView
                        android:id="@+id/textViewHelp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help"
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout >